--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@react-icons/all-files": "^4.1.0",
+    "@tanstack/react-query": "^5.32.1",
+    "axios": "^1.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.3",
     "react-router-dom": "^6.23.0",
-    "tailwind-merge": "^2.3.0"
+    "react-toastify": "^10.0.5",
+    "tailwind-merge": "^2.3.0",
+    "zod": "^3.23.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
