--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-popover": "^1.0.7",
     "@react-icons/all-files": "^4.1.0",
     "@tanstack/react-query": "^5.32.1",
     "axios": "^1.6.8",
